[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/inventory_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/settings_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/button_tabs/button.png" type="Texture" id=4]
[ext_resource path="res://assets/button_tabs/button_on.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/menu_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/button_tabs/button_focus.png" type="Texture" id=7]
[ext_resource path="res://assets/button_tabs/button_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/button_tabs/button_disabled.png" type="Texture" id=9]
[ext_resource path="res://assets/button_tabs/button_main.png" type="Texture" id=10]
[ext_resource path="res://assets/button_tabs/button_main_disabled.png" type="Texture" id=11]
[ext_resource path="res://assets/button_tabs/button_main_focus.png" type="Texture" id=12]
[ext_resource path="res://assets/button_tabs/button_main_on.png" type="Texture" id=13]
[ext_resource path="res://assets/button_tabs/button_main_hover.png" type="Texture" id=14]
[ext_resource path="res://assets/godot_theme/gui.theme" type="Theme" id=15]
[ext_resource path="res://scenes/preview_hud.tscn" type="PackedScene" id=16]
[ext_resource path="res://fonts/font_big.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://assets/fx/light_blue.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("button_inventory:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -80, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button_settings:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -80, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("button_inventory:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -80, 0 ), Vector2( 40, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button_settings:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -80, 0 ), Vector2( 98, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fond:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.392157 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("label:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 97, 82.5 ), Vector2( 97, 382.5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("preview_hud:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 400 ), Vector2( 0, 31 ) ]
}

[node name="hud" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 15 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fond" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -61.5
margin_right = 159.0
margin_bottom = 61.5
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.223529, 0.227451, 0.337255, 1 )
custom_colors/font_color_shadow = Color( 0.0745098, 0.698039, 0.94902, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "MENU FUTURISTIC
PREVIEW"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_settings" type="TextureButton" parent="."]
margin_left = -80.0
margin_right = -16.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../button_inventory")
focus_neighbour_right = NodePath("../button_inventory")
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="button_settings"]
margin_left = 22.0
margin_top = 5.0
margin_right = 42.0
margin_bottom = 25.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="button_inventory" type="TextureButton" parent="."]
margin_left = -80.0
margin_right = -16.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../button_settings")
focus_neighbour_right = NodePath("../button_settings")
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="button_inventory"]
margin_left = 22.0
margin_top = 5.0
margin_right = 42.0
margin_bottom = 25.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="button_menu" type="TextureButton" parent="."]
margin_right = 48.0
margin_bottom = 32.0
focus_neighbour_left = NodePath(".")
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
texture_disabled = ExtResource( 11 )
texture_focused = ExtResource( 12 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="button_menu"]
margin_left = 8.0
margin_top = 7.0
margin_right = 27.0
margin_bottom = 24.0
texture = ExtResource( 6 )
stretch_mode = 3

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "init"
playback_speed = 2.0
anims/init = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="preview_hud" parent="." instance=ExtResource( 16 )]
margin_top = 400.0
margin_bottom = 369.0

[node name="animation_preview" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/open = SubResource( 4 )

[node name="light_2d" type="Light2D" parent="."]
position = Vector2( 256, 288 )
texture = ExtResource( 18 )
texture_scale = 4.0
color = Color( 1, 1, 1, 0.0392157 )
[connection signal="toggled" from="button_settings" to="." method="_on_button_settings_toggled"]
[connection signal="toggled" from="button_inventory" to="." method="_on_button_inventory_toggled"]
[connection signal="toggled" from="button_menu" to="." method="_on_button_menu_toggled"]
